--- a/playbooks/kubernetes_node.yml
+++ b/playbooks/kubernetes_node.yml
@@ -1,7 +1,8 @@
 ---
-# Playbook to install Kubernetes control plane
+# Playbook to install Kubernetes node
 
 - hosts: all
   roles:
   - linux_server
+  - docker_engine
   - kubernetes_node
