--- a/roles/vagrant/tasks/rollback.yml
+++ b/roles/vagrant/tasks/rollback.yml
@@ -2,21 +2,21 @@
 # Tasks file for vagrant role
 # Reference: https://www.vagrantup.com/downloads
 
-- name: Install Vagrant for Debian systems
+- name: Uninstall Vagrant for Debian systems
   block:
-    - name: Add HashiCorp apt signing key
+    - name: Remove HashiCorp apt signing key
       apt_key:
         url: https://apt.releases.hashicorp.com/gpg
-        state: present
-    - name: Add hashicorp apt repository
+        state: absent
+    - name: Remove hashicorp apt repository
       apt_repository:
         repo: deb [arch=amd64] https://apt.releases.hashicorp.com {{ ubuntu_version_name }} main
-        state: present
+        state: absent
         filename: hashicorp.list
       changed_when: false
-    - name: Install vagrant
+    - name: Uninstall vagrant
       apt:
         name: vagrant
-        state: present
+        state: absent
         update_cache: yes
   when: ansible_os_family == "Debian"
