--- a/roles/kubernetes_controlplane/tasks/main.yml
+++ b/roles/kubernetes_controlplane/tasks/main.yml
@@ -1,108 +1,20 @@
 ---
 # Tasks file for kubernetes_controlplane role
 
-- name: Add an apt signing key for Docker
-  apt_key:
-    url: https://download.docker.com/linux/ubuntu/gpg
-    state: present
-
-- name: Add apt repository for stable version
-  apt_repository:
-    repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu xenial stable
-    state: present
-
-- name: Install docker and its dependecies
-  apt:
-    name: "{{ packages }}"
-    state: present
-    update_cache: yes
-  vars:
-    packages:
-      - docker-ce
-      - docker-ce-cli
-      - containerd.io
-  notify:
-    - docker status
-
-- name: Add vagrant user to docker group
-  user:
-    name: vagrant
-    group: docker
-
-- name: Change docker cgroup
-  copy:
-    dest: /etc/docker/daemon.json
-    content: |
-      {
-        "exec-opts": ["native.cgroupdriver=systemd"]
-      }
-    owner: root
-    group: root
-    mode: u=rw,g=r,o=r
-  register: docker_daemon_file
-
-- name: Restart docker
-  service:
-    name: docker
-    state: restarted
-  when: docker_daemon_file.changed
-
-- name: Remove swapfile from /etc/fstab
-  mount:
-    name: "{{ item }}"
-    fstype: swap
-    state: absent
-  with_items:
-    - swap
-    - none
-
-- name: Disable swap
-  command: swapoff -a
-  when: ansible_swaptotal_mb > 0
-
-- name: Add an apt signing key for Kubernetes
-  apt_key:
-    url: https://packages.cloud.google.com/apt/doc/apt-key.gpg
-    state: present
-
-- name: Adding apt repository for Kubernetes
-  apt_repository:
-    repo: deb https://apt.kubernetes.io/ kubernetes-xenial main
-    state: present
-    filename: kubernetes.list
-
-- name: Install Kubernetes binaries
-  apt:
-    name: "{{ packages }}"
-    state: present
-    update_cache: yes
-  vars:
-    packages:
-      - kubelet
-      - kubeadm
-      - kubectl
-
-- name: Configure node ip
-  lineinfile:
-    path: /etc/default/kubelet
-    line: KUBELET_EXTRA_ARGS=--node-ip={{ node_ip }}
-    create: yes
-
-- name: Restart kubelet
-  service:
-    name: kubelet
-    daemon_reload: yes
-    state: restarted
+- name: Run kubelet installation
+  include_role:
+    name: ../roles/kubernetes_common
+    tasks_from: kubelet
 
 - name: Initialize the Kubernetes cluster using kubeadm
-  command: kubeadm init --apiserver-advertise-address="192.168.56.10" --apiserver-cert-extra-sans="192.168.56.10"  --node-name k8s-master --pod-network-cidr=192.168.0.0/16
+  command: kubeadm init --apiserver-advertise-address="{{ kubernetes_controlnode_ip }}" --apiserver-cert-extra-sans="{{ kubernetes_controlnode_ip }}" --node-name k8s-controlenode --pod-network-cidr={{ kubernetes_pod_network_cidr }}/16
 
-- name: Setup kubeconfig for vagrant user
+- name: Setup kubeconfig for {{ provisioning_username }} user
   command: "{{ item }}"
   with_items:
-    - mkdir -p /home/vagrant/.kube
-    - cp -i /etc/kubernetes/admin.conf /home/vagrant/.kube/config
-    - chown vagrant:vagrant /home/vagrant/.kube/config
+    - mkdir -p /home/{{ provisioning_username }}/.kube
+    - cp -i /etc/kubernetes/admin.conf /home/{{ provisioning_username }}/.kube/config
+    - chown {{ provisioning_username }}:{{ provisioning_username }} /home/{{ provisioning_username }}/.kube/config
 
 - name: Install calico operator
   become: false
@@ -118,7 +30,7 @@
 
 - name: Copy join command to local file
   delegate_to: localhost
+  become: false
   copy:
     content: "{{ join_command.stdout_lines[0] }}"
     dest: ./join-command
-  become: false
