--- a/roles/virtualbox/tasks/rollback.yml
+++ b/roles/virtualbox/tasks/rollback.yml
@@ -1,26 +1,25 @@
 ---
-# Tasks file for virtualbox
+# Tasks file for virtualbox role
 # Reference: https://www.virtualbox.org/wiki/Linux_Downloads
 
-- name: Install VirtualBox for Debian systems
+- name: Uninstall VirtualBox for Debian systems
   block:
-    - name: Add virtualbox public key
+    - name: Remove virtualbox public key
       apt_key:
         url: "{{ item }}"
-        state: present
+        state: absent
       with_items:
+        - https://download.virtualbox.org/virtualbox/debian/oracle_vbox.asc
         - https://www.virtualbox.org/download/oracle_vbox_2016.asc
         - https://www.virtualbox.org/download/oracle_vbox.asc
-    - name: Add virtualbox apt repository
+        - https://download.virtualbox.org/virtualbox/debian/oracle_vbox_2016.asc
+    - name: Remove virtualbox apt repository
       apt_repository:
         repo: deb [arch=amd64] https://download.virtualbox.org/virtualbox/debian {{ ubuntu_version_name }} contrib
-        state: present
+        state: absent
         filename: virtualbox.list
-    - name: Install virtualbox
+    - name: Uninstall virtualbox
       apt:
         name: virtualbox-{{ virtualbox_version }}
-        state: present
-        update_cache: yes
-      notify:
-        - Run vboxconfig
+        state: absent
   when: ansible_os_family == "Debian"
