--- a/playbooks/kubernetes_controlplane.yml
+++ b/playbooks/kubernetes_controlplane.yml
@@ -2,7 +2,8 @@
 # Playbook to install Kubernetes control plane
 
 - hosts: all
+  become: true
   roles:
-  - linux_server
-  - docker_engine
-  - kubernetes_controlplane
+    - ../roles/linux_server
+    - ../roles/docker_engine
+    - ../roles/kubernetes_controlplane
