--- a/roles/kubernetes_common/tasks/kubelet.yml
+++ b/roles/kubernetes_common/tasks/kubelet.yml
@@ -42,9 +42,5 @@
     path: /etc/default/kubelet
     line: KUBELET_EXTRA_ARGS=--node-ip={{ kubernetes_controlnode_ip }}
     create: yes
-
-- name: Restart kubelet
-  service:
-    name: kubelet
-    daemon_reload: yes
-    state: restarted
+  notify:
+    - Run kubelet
