--- a/roles/kubernetes_controlplane/tasks/main.yml
+++ b/roles/kubernetes_controlplane/tasks/main.yml
@@ -1,36 +1,12 @@
 ---
 # Tasks file for kubernetes_controlplane role
 
-- name: Run kubelet installation
-  include_role:
-    name: ../roles/kubernetes_common
-    tasks_from: kubelet
+- name: Check if kubeadm has already run
+  stat:
+    path: "/etc/kubernetes/pki/ca.key"
+  register: kubeadm_ca
 
-- name: Initialize the Kubernetes cluster using kubeadm
-  command: kubeadm init --apiserver-advertise-address="{{ kubernetes_controlnode_ip }}" --apiserver-cert-extra-sans="{{ kubernetes_controlnode_ip }}" --node-name k8s-controlenode --pod-network-cidr={{ kubernetes_pod_network_cidr }}/16
-
-- name: Setup kubeconfig for {{ provisioning_username }} user
-  command: "{{ item }}"
-  with_items:
-    - mkdir -p /home/{{ provisioning_username }}/.kube
-    - cp -i /etc/kubernetes/admin.conf /home/{{ provisioning_username }}/.kube/config
-    - chown {{ provisioning_username }}:{{ provisioning_username }} /home/{{ provisioning_username }}/.kube/config
-
-- name: Install calico operator
-  become: false
-  command: kubectl create -f https://docs.projectcalico.org/manifests/tigera-operator.yaml
-
-- name: Install calico resources
-  become: false
-  command: kubectl create -f https://docs.projectcalico.org/manifests/custom-resources.yaml
-
-- name: Generate join command
-  command: kubeadm token create --print-join-command
-  register: join_command
-
-- name: Copy join command to local file
-  delegate_to: localhost
-  become: false
-  copy:
-    content: "{{ join_command.stdout_lines[0] }}"
-    dest: ./join-command
+- name: Init cluster if needed
+  include_tasks: init.yml
+  when: not kubeadm_ca.stat.exists
+  run_once: yes
