--- a/roles/kubernetes_node/tasks/main.yml
+++ b/roles/kubernetes_node/tasks/main.yml
@@ -1,16 +1,10 @@
 ---
-# Tasks file for kubernetes_node role
 
-- name: Run kubelet installation
-  include_role:
-    name: ../roles/kubernetes_common
-    tasks_from: kubelet
+- name: Check if kubelet.conf exists
+  stat:
+    path: "/etc/kubernetes/kubelet.conf"
+  register: kubelet_conf
 
-- name: Copy the join command to server location
-  copy:
-    src: join-command
-    dest: /tmp/join-command.sh
-    mode: 0777
-
-- name: Join the node to cluster
-  command: sh /tmp/join-command.sh
+- name: Join to cluster if needed
+  include_tasks: join.yml
+  when: not kubelet_conf.stat.exists
