Small cosmetic changes

--- a/roles/kubernetes_controlplane/tasks/init.yml
+++ b/roles/kubernetes_controlplane/tasks/init.yml
@@ -33,4 +33,4 @@
   become: false
   copy:
     content: "{{ join_command.stdout_lines[0] }}"
-    dest: ./join-command
+    dest: ./join-command.sh
