--- a/roles/vagrant_k8s/tasks/main.yml
+++ b/roles/vagrant_k8s/tasks/main.yml
@@ -8,6 +8,7 @@
     state: directory
   with_items:
     - "{{ vagrant_k8s_path }}"
+
 - name: Create Vagrantfile
   become: false
   template:
@@ -15,14 +16,17 @@
     dest: "{{ vagrant_k8s_path }}/Vagrantfile"
   notify:
     - Run vagrant
+
 - name: Get the username running the deploy
   become: false
   local_action: command whoami
   register: username_on_the_host
   check_mode: no
-- name: debug
+
+- name: Display username
   debug:
     var: username_on_the_host
+
 - name: Create vagrant start script
   template:
     src: templates/vagrantstart.j2
@@ -34,6 +38,7 @@
     mode: 0755
   notify:
     - Run vagrant
+
 - name: Create vagrant service
   template:
     src: templates/vagrantservice.j2
