--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,13 @@
-default:
-  image: ubuntu:20.04
+image: python:3.8
 
 ci:
   stage: build
-  before_script:
-    - echo "TODO"
+  # before_script:
+  #   - python3 -V
+  #   - apt install -y python3-pip
+  #   - apt install -y build-essential libssl-dev libffi-dev libpython3-dev python3-dev python3-venv
+  #   - apt install -y python-is-python3
+  #   - python -m pip install ansible
+  #   - apt-get install -y ansible-lint
   script:
-    - echo "TODO"
+    - ansible-playbook --syntax-check playbooks/*.yml
