--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,10 @@
-image: python:3.8
+image: python:3.10
 
 ci:
   stage: build
-  # before_script:
-  #   - python3 -V
-  #   - apt install -y python3-pip
-  #   - apt install -y build-essential libssl-dev libffi-dev libpython3-dev python3-dev python3-venv
-  #   - apt install -y python-is-python3
-  #   - python -m pip install ansible
-  #   - apt-get install -y ansible-lint
+  before_script:
+    - python -m pip install --upgrade pip
+    - python -m pip install ansible
+    - pip install "ansible-lint[yamllint]"
   script:
     - ansible-playbook --syntax-check playbooks/*.yml
