--- a/roles/vagrant/tasks/main.yml
+++ b/roles/vagrant/tasks/main.yml
@@ -20,6 +20,6 @@
       apt:
         name: vagrant
         state: present
-        update_cache: yes
+        update_cache: true
 
   when: ansible_os_family == "Debian"
