--- a/roles/vagrant_k8s/tasks/main.yml
+++ b/roles/vagrant_k8s/tasks/main.yml
@@ -1,11 +1,15 @@
 ---
 # Tasks file for vagrant_singlevm_ubuntu1804 role
+# limitation: we "assume" usergroup is the same as username on the host
 
 - name: Create {{ vagrant_k8s_path }} directory
   become: false
   file:
     path: "{{ item }}"
     state: directory
+    owner: "{{ ansible_user }}"
+    group: "{{ ansible_user }}"
+    mode: "0755"
   with_items:
     - "{{ vagrant_k8s_path }}"
 
@@ -14,28 +18,20 @@
   template:
     src: templates/Vagrantfile.j2
     dest: "{{ vagrant_k8s_path }}/Vagrantfile"
+    owner: "{{ ansible_user }}"
+    group: "{{ ansible_user }}"
+    mode: "0664"
   notify:
     - Run vagrant
-
-- name: Get the username running the deploy
-  become: false
-  local_action: command whoami
-  register: username_on_the_host
-  check_mode: no
-
-- name: Display username
-  debug:
-    var: username_on_the_host
 
 - name: Create vagrant start script
   template:
     src: templates/vagrantstart.j2
-    # comment: could also be "/usr/local/bin/start-vagrant-k8s-node.sh"
-    dest: "/home/{{ username_on_the_host.stdout_lines[0] }}/run_vagrant_k8s.sh"
-    owner: "{{ username_on_the_host.stdout_lines[0] }}"
-    # limitation: we "assume" it's the same
-    group: "{{ username_on_the_host.stdout_lines[0] }}"
-    mode: 0755
+    # comment: could also be placed in /usr/local/bin directory
+    dest: "/home/{{ ansible_user }}/run_vagrant_k8s.sh"
+    owner: "{{ ansible_user }}"
+    group: "{{ ansible_user }}"
+    mode: "0755"
   notify:
     - Run vagrant
 
@@ -43,14 +39,13 @@
   template:
     src: templates/vagrantservice.j2
     dest: "/etc/systemd/system/vagrant-k8s-cluster.service"
-    owner: "{{ username_on_the_host.stdout_lines[0] }}"
-    group: "{{ username_on_the_host.stdout_lines[0] }}"
-    mode: 0664
+    owner: "{{ ansible_user }}"
+    group: "{{ ansible_user }}"
+    mode: "0664"
   vars:
-    username: "{{ username_on_the_host.stdout_lines[0] }}"
-    # limitation: we "assume" it's the same
-    usergroup: "{{ username_on_the_host.stdout_lines[0] }}"
-    script: "/home/{{ username_on_the_host.stdout_lines[0] }}/run_vagrant_k8s.sh"
+    username: "{{ ansible_user }}"
+    usergroup: "{{ ansible_user }}"
+    script: "/home/{{ ansible_user }}/run_vagrant_k8s.sh"
   notify:
     - Run vagrant
     - Reload service daemon
