--- a/roles/docker_engine/tasks/main.yml
+++ b/roles/docker_engine/tasks/main.yml
@@ -7,16 +7,18 @@
       apt_key:
         url: https://download.docker.com/linux/ubuntu/gpg
         state: present
+
     - name: Add apt repository for stable version
       apt_repository:
         repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ubuntu_version_name }} stable
         state: present
         filename: docker.list
+
     - name: Install docker and its dependencies
       apt:
         name: "{{ packages }}"
         state: present
-        update_cache: yes
+        update_cache: true
       vars:
         packages:
           - docker-ce
@@ -24,10 +26,12 @@
           - containerd.io
       notify:
         - Start docker
+
     - name: Add user to docker group
       user:
         name: "{{ provisioning_username }}"
         group: docker
+
     - name: Change docker cgroup
       copy:
         dest: /etc/docker/daemon.json
@@ -39,9 +43,11 @@
         group: root
         mode: u=rw,g=r,o=r
       register: docker_daemon_file
+
     - name: Restart docker
       service:
         name: docker
         state: restarted
       when: docker_daemon_file.changed
+
   when: ansible_os_family == "Debian"
