--- a/roles/linux_server/tasks/main.yml
+++ b/roles/linux_server/tasks/main.yml
@@ -7,7 +7,7 @@
       apt:
         name: "{{ packages }}"
         state: present
-        update_cache: yes
+        update_cache: true
       vars:
         packages:
           - apt-transport-https
