--- a/playbooks/kubernetes_node.yml
+++ b/playbooks/kubernetes_node.yml
@@ -1,7 +1,6 @@
 ---
-# Playbook to install Kubernetes node
-
-- hosts: all
+- name: Install Kubernetes node
+  hosts: all
   become: true
   roles:
     - ../roles/linux_server
