--- a/playbooks/vagrant.yml
+++ b/playbooks/vagrant.yml
@@ -1,7 +1,6 @@
 ---
-# Playbook to install Vagrant
-
-- hosts: all
+- name: Install Vagrant
+  hosts: all
   become: true
   roles:
     - ../roles/linux_server
