--- a/playbooks/vagrant_k8s.yml
+++ b/playbooks/vagrant_k8s.yml
@@ -1,7 +1,6 @@
 ---
-# Playbook to install Vagrant Kubernetes cluster
-
-- hosts: all
+- name: Install Vagrant Kubernetes cluster
+  hosts: all
   become: true
   roles:
     - ../roles/linux_server
