--- a/galaxy.yml
+++ b/galaxy.yml
@@ -1,8 +1,8 @@
-namespace: rabbids_incubator
+namespace: devpro
 
 name: system
 
-version: 1.0.0
+version: 1.1.0
 
 readme: README.md
 
@@ -22,16 +22,16 @@ tags: []
 dependencies: {}
 
 # The URL of the originating SCM repository
-repository: https://github.com/rabbids-incubator/ansible-system-collection
+repository: https://github.com/devpro/ansible-system-collection
 
 # The URL to any online docs
-documentation: https://github.com/rabbids-incubator/ansible-system-collection
+documentation: https://github.com/devpro/ansible-system-collection
 
 # The URL to the homepage of the collection/project
-homepage: https://github.com/rabbids-incubator/ansible-system-collection
+homepage: https://github.com/devpro/ansible-system-collection
 
 # The URL to the collection issue tracker
-issues: https://github.com/rabbids-incubator/ansible-system-collection/issues
+issues: https://github.com/devpro/ansible-system-collection/issues
 
 # A list of file glob-like patterns used to filter any files or directories that should not be included in the build artifact.
 # A pattern is matched from the relative path of the file or directory of the collection directory.
