--- a/roles/vagrant_singlevm_ubuntu1804/tasks/main.yml
+++ b/roles/vagrant_singlevm_ubuntu1804/tasks/main.yml
@@ -1,21 +1,19 @@
 ---
-# Tasks file for vagrant_singlevm_ubuntu1804 role
-
 - name: Get the username running the deploy
   become: false
   delegate_to: localhost
-  command: whoami
+  ansible.builtin.command: whoami
   register: username_on_the_host
   check_mode: false
   changed_when: whoami.rc != 0
 
 - name: Display username
-  debug:
+  ansible.builtin.debug:
     var: username_on_the_host
 
 - name: Create {{ vagrant_singlevm_path }} directory
   become: false
-  file:
+  ansible.builtin.file:
     path: "{{ item }}"
     state: directory
     owner: "{{ username_on_the_host.stdout_lines[0] }}"
@@ -26,7 +24,7 @@
 
 - name: Create Vagrantfile
   become: false
-  template:
+  ansible.builtin.template:
     src: templates/Vagrantfile.j2
     dest: "{{ vagrant_singlevm_path }}/Vagrantfile"
     owner: "{{ username_on_the_host.stdout_lines[0] }}"
