--- a/roles/virtualbox/handlers/main.yml
+++ b/roles/virtualbox/handlers/main.yml
@@ -1,7 +1,5 @@
 ---
-# Handlers file for virtualbox role
-
 - name: Run vboxconfig
-  command: vboxconfig
+  ansible.builtin.command: vboxconfig
   when:
     - ansible_system == 'Linux'
