--- a/roles/kubernetes_node/tasks/main.yml
+++ b/roles/kubernetes_node/tasks/main.yml
@@ -1,11 +1,9 @@
 ---
-# Tasks file for kubernetes_node subrole
-
 - name: Check if kubelet.conf exists
-  stat:
+  ansible.builtin.stat:
     path: "/etc/kubernetes/kubelet.conf"
   register: kubelet_conf
 
 - name: Join to cluster if needed
-  include_tasks: join.yml
+  ansible.builtin.include_tasks: join.yml
   when: not kubelet_conf.stat.exists
