--- a/roles/vagrant/tasks/rollback.yml
+++ b/roles/vagrant/tasks/rollback.yml
@@ -1,25 +1,19 @@
 ---
-# Tasks file for vagrant role
-# Reference: https://www.vagrantup.com/downloads
-
 - name: Uninstall Vagrant for Debian systems
+  when: ansible_os_family == "Debian"
   block:
     - name: Remove HashiCorp apt signing key
-      apt_key:
+      ansible.builtin.apt_key:
         url: https://apt.releases.hashicorp.com/gpg
         state: absent
-
     - name: Remove hashicorp apt repository
-      apt_repository:
+      ansible.builtin.apt_repository:
         repo: deb [arch=amd64] https://apt.releases.hashicorp.com {{ ubuntu_version_name }} main
         state: absent
         filename: hashicorp.list
       changed_when: false
-
     - name: Uninstall vagrant
-      apt:
+      ansible.builtin.apt:
         name: vagrant
         state: absent
         update_cache: true
-
-  when: ansible_os_family == "Debian"
