--- a/roles/linux_server/tasks/main.yml
+++ b/roles/linux_server/tasks/main.yml
@@ -2,10 +2,15 @@
 - name: Install required components for Debian systems
   when: ansible_os_family == "Debian"
   block:
+    - name: Install aptitude
+      ansible.builtin.apt:
+        name: aptitude
+        state: latest
+        update_cache: true
     - name: Install Debian packages required for installation over HTTPS
       ansible.builtin.apt:
         name: "{{ packages }}"
-        state: present
+        state: latest
         update_cache: true
       vars:
         packages:
