Fix issues installing Kubernetes 1.25

--- a/playbooks/kubernetes_controlplane.yml
+++ b/playbooks/kubernetes_controlplane.yml
@@ -4,5 +4,6 @@
   become: true
   roles:
     - ../roles/linux_server
-    - ../roles/docker_engine
+    # - ../roles/docker_engine
+    - ../roles/containerd
     - ../roles/kubernetes_controlplane
