--- a/roles/kubernetes_common/tasks/kubelet.yml
+++ b/roles/kubernetes_common/tasks/kubelet.yml
@@ -1,4 +1,6 @@
 ---
+# https://kubernetes.io/docs/setup/production-environment/tools/kubeadm/install-kubeadm/
+
 - name: Remove swapfile from /etc/fstab
   ansible.posix.mount:
     name: "{{ item }}"
@@ -44,4 +46,4 @@
     group: root
     mode: "0644"
   notify:
-    - Run kubelet
+    - Restart kubelet
