--- a/roles/containerd/handlers/main.yml
+++ b/roles/containerd/handlers/main.yml
@@ -1,9 +1,16 @@
 ---
+
 - name: Start containerd
   ansible.builtin.service:
     name: containerd
     state: started
+
 - name: Restart containerd
   ansible.builtin.service:
     name: containerd
     state: restarted
+
+- name: Reload sysctl
+  ansible.builtin.command:
+    cmd:
+      sysctl --system
