--- a/roles/docker_engine/tasks/main.yml
+++ b/roles/docker_engine/tasks/main.yml
@@ -14,7 +14,7 @@
     - name: Install docker and its dependencies
       ansible.builtin.apt:
         name: "{{ packages }}"
-        state: latest
+        state: present
         update_cache: true
       vars:
         packages:
