Replace meta by ansible.builtin.meta

--- a/roles/containerd/tasks/main.yml
+++ b/roles/containerd/tasks/main.yml
@@ -66,4 +66,4 @@
       notify:
         - Restart containerd
     - name: Flush handlers
-      meta: flush_handlers
+      ansible.builtin.meta: flush_handlers
