Feature/improve vagrant (#3)
* Update README.md

* Add scripts for vagrant_k8s role

* Fix issues installing Kubernetes 1.25

* Fix kubernetes node case

* Update doc

* Replace meta by ansible.builtin.meta

--- a/roles/kubernetes_common/tasks/kubelet.yml
+++ b/roles/kubernetes_common/tasks/kubelet.yml
@@ -1,4 +1,6 @@
 ---
+# https://kubernetes.io/docs/setup/production-environment/tools/kubeadm/install-kubeadm/
+
 - name: Remove swapfile from /etc/fstab
   ansible.posix.mount:
     name: "{{ item }}"
@@ -43,6 +45,8 @@
     owner: root
     group: root
     mode: "0644"
-
   notify:
-    - Run kubelet
+    - Restart kubelet
+
+- name: Flush handlers
+  ansible.builtin.meta: flush_handlers
